kubernetes/api/block-stream.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: block-stream
  name: block-stream
spec:
  ports:
    - name: block-stream
      protocol: TCP
      port: 9010
      targetPort: 9010
  selector:
    app: api
